add email settings and section for navbar

--- a/base/web/templates/home/snippets/hero_section.html
+++ b/base/web/templates/home/snippets/hero_section.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="relative isolate overflow-hidden">
+<section id="home" class="relative isolate overflow-hidden">
     <!-- Overlay qui s'affiche en dessous de md -->
     <div class="absolute inset-0 bg-primary-950/60 md:bg-transparent -z-10"></div>
 
@@ -22,4 +22,4 @@
         </div>
       </div>
     </div>
-</div>
+</section>
