--- a/base/web/templates/home/snippets/page_contact.html
+++ b/base/web/templates/home/snippets/page_contact.html
@@ -1,4 +1,4 @@
-<div class="relative isolate ">
+<section id="contact" class="relative isolate ">
     <div class="mx-auto grid max-w-7xl grid-cols-1 lg:grid-cols-2">
       <div class="relative px-6 pb-20 pt-24 sm:pt-32 lg:static lg:px-8 lg:py-48">
         <div class="mx-auto max-w-xl lg:mx-0 lg:max-w-lg">
@@ -35,7 +35,8 @@
           </dl>
         </div>
       </div>
-      <form action="#" method="POST" class="px-6 pb-24 pt-20 sm:pb-32 lg:px-8 lg:py-48">
+      <form action="{% url 'send_mail_page' %}" method="POST" class="px-6 pb-24 pt-20 sm:pb-32 lg:px-8 lg:py-48">
+        {% csrf_token %}
         <div class="mx-auto max-w-xl lg:mr-0 lg:max-w-lg">
           <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
             <div>
@@ -69,5 +70,5 @@
         </div>
       </form>
     </div>
-  </div>
+  </section>
   
