--- a/base/web/templates/home/snippets/skills_section.html
+++ b/base/web/templates/home/snippets/skills_section.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="w-full mx-auto p-6 ">
+<section id="skills" class="w-full mx-auto p-6 ">
     <h2 class=" pb-10 text-pretty text-4xl font-semibold tracking-tight text-white sm:text-5xl  text-center">My skills </h2>
 
     <!-- Première ligne -->
@@ -325,4 +325,4 @@
 
 <!-- Ligne de séparation -->
 <hr class="border-gray-300 my-4  hidden md:block">
-</div>
+</section>
