--- a/base/theme/templates/navbar2.html
+++ b/base/theme/templates/navbar2.html
@@ -32,22 +32,22 @@
           </div>
 
           <div class="flex shrink-0 items-center md:hidden">
-            <button type="button" class="bg-gradient-to-r from-pink-500 to-purple-900 relative inline-flex items-center gap-x-1.5 rounded-full px-4 py-1.5 text-sm font-semibold text-secondary ">
+            <a href="#contact"  class="bg-gradient-to-r from-pink-500 to-purple-900 relative inline-flex items-center gap-x-1.5 rounded-full px-4 py-1.5 text-sm font-semibold text-secondary ">
             Contact
-            </button>
+            </a>
           </div>
         
         <div class="hidden md:ml-6 md:flex md:items-center md:space-x-4">
-            <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-secondary-300 hover:text-secondary-200 hover:bg-primary-900" >Home</a>
-            <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-secondary-300 hover:text-secondary-200 hover:bg-primary-900">Projects</a>
-            <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-secondary-300 hover:text-secondary-200 hover:bg-primary-900">About</a>
+            <a href="#home" class="rounded-md px-3 py-2 text-sm font-medium text-secondary-300 hover:text-secondary-200 hover:bg-primary-900" >Home</a>
+            <a href="#about" class="rounded-md px-3 py-2 text-sm font-medium text-secondary-300 hover:text-secondary-200 hover:bg-primary-900">About me</a>
+            <a href="#skills" class="rounded-md px-3 py-2 text-sm font-medium text-secondary-300 hover:text-secondary-200 hover:bg-primary-900">My skills</a>
           
   
             <div class="flex items-center">
             <div class="shrink-0">
-                <button type="button" class="bg-gradient-to-r from-pink-500 to-purple-900 relative inline-flex items-center gap-x-1.5 rounded-full px-4 py-1.5 text-sm font-semibold text-secondary ">
+                <a href="#contact" class="bg-gradient-to-r from-pink-500 to-purple-900 relative inline-flex items-center gap-x-1.5 rounded-full px-4 py-1.5 text-sm font-semibold text-secondary ">
                 Contact
-                </button>
+                </a>
             </div>
             </div>
         </div>
@@ -58,9 +58,9 @@
     <div class="md:hidden" id="mobile-menu" x-show="open_navbar">
       <div class="space-y-1 px-2 pb-3 pt-2 sm:px-3">
         <!-- Current: "bg-primary-900 text-secondary", Default: "text-primary-300 hover:bg-primary-700 hover:text-secondary" -->
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-primary-300 hover:bg-primary-700 hover:text-secondary">Home</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-primary-300 hover:bg-primary-700 hover:text-secondary">Project</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-primary-300 hover:bg-primary-700 hover:text-secondary">About</a>
+        <a href="#home" class="block rounded-md px-3 py-2 text-base font-medium text-primary-300 hover:bg-primary-700 hover:text-secondary">Home</a>
+        <a href="#about" class="block rounded-md px-3 py-2 text-base font-medium text-primary-300 hover:bg-primary-700 hover:text-secondary">About me</a>
+        <a href="#skills" class="block rounded-md px-3 py-2 text-base font-medium text-primary-300 hover:bg-primary-700 hover:text-secondary">My skills</a>
       </div>
   
     </div>
