--- a/base/web/templates/home/snippets/skills_section.html
+++ b/base/web/templates/home/snippets/skills_section.html
@@ -21,9 +21,9 @@
                 <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
                 <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
                 <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
-                <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
-                <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
-                <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
+                <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
+                <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
+                <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
                 <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
 
                 <button @click="open_django = true" x-show="!open_django">
@@ -59,7 +59,7 @@
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
-            <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
+            <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
@@ -102,9 +102,9 @@
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
-            <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
-            <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
-            <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
+            <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
+            <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
+            <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
               <button @click="open_css = true" x-show="!open_css">
                 <svg class="text-gray-400 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" >
@@ -139,7 +139,7 @@
               <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
               <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
               <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
-              <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
+              <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
               <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
               <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
               <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
@@ -219,8 +219,8 @@
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
-            <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
-            <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
+            <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
+            <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
   
@@ -301,9 +301,10 @@
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
-            <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
-            <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
-            <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
+            <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
+            <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
+            <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
+            <span class="w-2 h-2 md:w-3 md:h-3 bg-purple-500 rounded-full"></span>
             <span class="w-2 h-2 md:w-3 md:h-3 bg-gray-400 rounded-full"></span>
               <button @click="open_github = true" x-show="!open_github">
                 <svg class="text-gray-400 w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" >
