--- a/base/web/templates/home/snippets/logo_banner.html
+++ b/base/web/templates/home/snippets/logo_banner.html
@@ -2,6 +2,7 @@
 <div class="border-y py-18  ">
     <div class="mx-auto  px-6 lg:px-8 items-center">
       <div class="mx-auto my-10 grid max-w-lg grid-cols-3 items-center gap-x-8 gap-y-10 sm:max-w-xl sm:gap-x-10 lg:mx-0 lg:max-w-none ">
+        <a href="https://formations.pantheonsorbonne.fr/fr/catalogue-des-formations/master-M/master-miage-KBUNM1QC.html">
         <svg class="logo-p1  max-h-12 md:max-h-20 w-full object-contain" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2737.65 1244.23">
             <g>
               <path class="fill-white" d="M1338.33,289.56l.19,30.94c7.13-2.01,14.73-3.59,22.34-4.54v-37.98c0-9.37,5.98-17.5,15.54-17.5s15.55,8.13,15.55,17.5v37.98c7.6.95,15.16,2.53,22.28,4.54l.19-30.94c0-9.28,4.55-14.06,11.43-14.06,2.1,0,4.11.43,4.11.43v-13.82c-7.98-6.6-32.57-24.68-40.6-72.83h-25.92c-8.08,48.16-32.67,66.24-40.6,72.83v13.82s1.96-.43,4.11-.43c6.84,0,11.39,4.78,11.39,14.06Z"></path>
@@ -45,9 +46,13 @@
               <path class="fill-white" d="M1877.25,763.64c19.97-3.64,27.56-16.32,27.56-29.85,0-29.87-23.83-37.48-59.5-37.48h-55.2v8.25c10.13.99,16.33,3.11,16.33,17.29v88.7c0,12.87-2.51,16.5-13.96,18.48-10.07-.87-12.84-2.83-16.13-8.46l-31.15-49.05c13.73-4.99,28.36-15.87,28.36-36.35,0-24.82-21.14-38.85-56.4-38.85h-60.22v8.15c12.22,1.24,16.54,4.07,16.54,19.4v86.6c0,15.83-4.05,17.44-16.67,19.08v7.94h62.25v-7.94c-12.13-.99-16.91-3.25-16.91-19.08v-103.6s17.21,0,17.21,0c11.35,0,23.69,8.54,23.69,28.52,0,24.16-16,32.24-29.27,32.24-.5,0-.95,0-1.43,0v10.39c2.49.2,4.76,1.45,6.06,3.61l29.71,49.7c2.12,3.66,5.72,6.17,11.01,6.17h30.89s62.81,0,62.81,0c39.7,0,57.52-15.47,57.52-37.49,0-20.86-16.02-32.06-33.09-36.36ZM1835.38,706.75h10.63c17.29,0,28.3,6.63,28.3,26.29,0,16.9-7.4,26.12-29.06,26.12h-9.87v-52.41ZM1850.81,826.69c-9.53,0-15.64-.49-15.64-16.28v-41.48h13.1c21.07,0,31.03,8.84,31.03,29.64,0,19.65-9.54,28.12-28.49,28.12Z"></path>
             </g>
           </svg>
-          
+        </a>
+          <a href="https://www.ycsos-certification.fr/">
           <img class="max-h-12 md:max-h-18 w-full object-contain " src="{% static 'images/logo/ycsos.png' %}" alt="Reform" width="158" height="48">
-          <img class="max-h-12 md:max-h-20 w-full object-contain" src="{% static 'images/logo/image.png' %}" alt="Reform" width="158" height="48">
-       </div>
+        </a>
+        <a href="https://apps.apple.com/fr/developer/guideling-ou/id1571493713">
+            <img class="max-h-12 md:max-h-20 w-full object-contain" src="{% static 'images/logo/image.png' %}" alt="Reform" width="158" height="48">
+           </a>
+        </div>
     </div>
   </div>
