--- a/base/theme/templates/base.html
+++ b/base/theme/templates/base.html
@@ -2,11 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>Django Tailwind</title>
+    <title>SaraWeb</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<script src="//unpkg.com/alpinejs" defer></script>
+		<link rel="icon" type="image/png" href="{% static 'images/logo.png' %}">
 
 		{% tailwind_css %}
 	</head>
