--- a/base/web/templates/home/snippets/about_me.html
+++ b/base/web/templates/home/snippets/about_me.html
@@ -4,12 +4,21 @@
       <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
         <div class="mx-auto flex max-w-2xl flex-col gap-16 bg-white/5 px-6 py-16 ring-1 ring-white/10 sm:rounded-3xl sm:p-8 lg:mx-0 lg:max-w-none lg:flex-row lg:items-center lg:py-20 xl:gap-x-20 xl:px-20">
           <img class="h-96 w-full flex-none rounded-2xl object-cover shadow-xl lg:aspect-square lg:h-auto lg:max-w-sm" src="{% static 'images/image.png' %}" alt="">
-          <div class="w-full flex-auto">
+          <div class="relative w-full flex-auto">
             <h2 class="text-pretty text-4xl font-semibold tracking-tight text-white sm:text-5xl">About me</h2>
             <p class="mt-6 text-pretty text-lg/8 text-gray-300">
               During my two years in a work-study program in a start-up specializing in web and mobile development, I gained valuable experience working on various projects, ranging from initial design to putting online, not forgetting maintenance. continues. This immersion allowed me to understand the challenges of each stage of the development process and to collaborate closely with different teams. I was thus able to strengthen my technical skills while refining my project management skills. In particular, I have developed solid expertise in Django, whether for the creation of dynamic websites or for the implementation of robust APIs. Working on site design is one of my strong points, and I take real pleasure in combining aesthetics and performance to offer exceptional user experiences.
             </p>
+          
+            <div class="flex justify-end mt-6">
+              <a href="{% static 'documents/CV_SARA_ELALLOUCHE.pdf' %}" 
+                class="bg-gradient-to-r from-pink-500 to-purple-900 relative inline-flex items-center gap-x-1.5 rounded-full px-4 py-1.5 text-sm font-semibold text-secondary shadow-md hover:opacity-90 transition duration-300"
+                download>
+                Download my CV
+              </a>
+            </div>
           </div>
+          
         </div>
       </div>
       <div class="absolute inset-x-0 -top-16 -z-10 flex transform-gpu justify-center overflow-hidden blur-3xl" aria-hidden="true">
