switch footer icon and text mobile view

--- a/base/theme/templates/footer.html
+++ b/base/theme/templates/footer.html
@@ -1,6 +1,8 @@
 <footer class="bg-primary-950">
   <div class="mx-auto max-w-7xl px-6 py-12 md:flex md:items-center md:justify-between lg:px-8">
-    <div class="flex justify-center gap-x-6 md:order-2">
+    
+    <p class="text-center text-sm/6 text-primary-400 md:order-1 ">&copy; 2025 SaraWeb, Inc. All rights reserved.</p>
+    <div class="mt-4 md:mt-0 flex justify-center gap-x-6 md:order-2">
       <a href="https://www.linkedin.com/in/sara-el-allouche-114830222/" class="text-primary-400 hover:text-primary-300">
         <span class="sr-only">Linkedin</span>
         <svg class="size-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
@@ -15,6 +17,5 @@
       </a>
        
     </div>
-    <p class="mt-8 text-center text-sm/6 text-primary-400 md:order-1 md:mt-0">&copy; 2025 SaraWeb, Inc. All rights reserved.</p>
   </div>
 </footer>
