--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<script src="//unpkg.com/alpinejs" defer></script>
-		<link rel="icon" type="image/png" href="{% static 'images/logo.png' %}">
+		<link rel="icon" type="image/png" href="{% static 'images/logo/codebysara.png' %}">
 		<script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
 		{% tailwind_css %}
 	</head>
